[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"

[workspace]
members = ["kernel"]

[build-dependencies]
# opencv = { version = "0.84.5", features = ["clang-runtime"]}
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.4"
# avro-rs = "0.13.0"
# flatbuffers = "23.5.26"
# rkyv = {version = "0.7.42", features = ["copy_unsafe"] }
# serde = {version = "1.0.183", features = ["derive"]}
# bin